Fix layout bugs on welcome page and in footer
Conflicts:
	app/assets/stylesheets/controller/welcome.css.scss

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -46,7 +46,7 @@
   }
 
   li {
-    display:inline;
+    display: inline-block;
     margin-right: 1em;
     .Feedback {
       margin-right: 0em;
